--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -8,17 +8,8 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+lite-lib = { path = "../lite-lib" }
 wasm-bindgen = "0.2"
-
-[dependencies.web-sys]
-version = "0.3.24"
-features = [
-  'Document',
-  'Element',
-  'HtmlElement',
-  'Node',
-  'Window',
-]
 
 [profile.release]
 opt-level = "s"
