--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -5,13 +5,5 @@ authors = ["oScape <benoit.chassignol@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies.web-sys]
-version = "0.3.24"
-features = [
-  'Document',
-  'Element',
-  'HtmlElement',
-  'Node',
-  'Window',
-]
+[dependencies]
+web-sys = { version = "0.3.24", features = ['Document','Element','HtmlElement','Node','Window'] }
