--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+wasm-bindgen = "0.2.60"
+js-sys = "0.3.37"
 web-sys = { version = "0.3.24", features = ['Document','Element','HtmlElement','Node','Window'] }
