--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 lite-lib = { path = "../lite-lib" }
 wasm-bindgen = "0.2.60"
+web-sys = { version = "0.3.24", features = ['HtmlElement'] }
 
 [profile.release]
 opt-level = "s"
