--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -8,4 +8,17 @@ edition = "2018"
 [dependencies]
 wasm-bindgen = "0.2.60"
 js-sys = "0.3.37"
-web-sys = { version = "0.3.24", features = ['Document','Element','HtmlElement','HtmlButtonElement','HtmlSelectElement','HtmlOptionElement','Node','Window','Event','EventTarget'] }
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    'Document',
+    'Element',
+    'HtmlElement',
+    'HtmlButtonElement',
+    'HtmlSelectElement',
+    'HtmlOptionElement',
+    'Window',
+    'Event',
+    'EventTarget'
+]
