--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -10,7 +10,24 @@ crate-type = ["cdylib"]
 [dependencies]
 lite-lib = { path = "../lite-lib" }
 wasm-bindgen = "0.2.60"
-web-sys = { version = "0.3.24", features = ['HtmlElement'] }
+wasm-bindgen-futures = "0.4.11"
+js-sys = "0.3.37"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    'Event',
+    'HtmlSelectElement',
+    'HtmlElement',
+    'Window',
+    'Event',
+    'EventTarget',
+    'Headers',
+    'Request',
+    'RequestInit',
+    'RequestMode',
+    'Response',
+]
 
 [profile.release]
 opt-level = "s"
