--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -18,6 +18,7 @@ features = [
     'HtmlButtonElement',
     'HtmlSelectElement',
     'HtmlOptionElement',
+    'HtmlLabelElement',
     'Window',
     'Event',
     'EventTarget'
