--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 wasm-bindgen = "0.2.60"
+wasm-bindgen-futures = "0.4.11"
 js-sys = "0.3.37"
 
 [dependencies.web-sys]
@@ -21,5 +22,7 @@ features = [
     'HtmlLabelElement',
     'Window',
     'Event',
-    'EventTarget'
+    'EventTarget',
+    'Response',
+    'Request'
 ]
