--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 wasm-bindgen = "0.2.60"
 wasm-bindgen-futures = "0.4.11"
 js-sys = "0.3.37"
+lazy_static = "1.4.0"
 
 [dependencies.web-sys]
 version = "0.3.4"
