--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -16,9 +16,11 @@ features = [
     'Document',
     'HtmlElement',
     'HtmlButtonElement',
-    'HtmlSelectElement',
-    'HtmlOptionElement',
+    'HtmlFormElement',
+    'HtmlInputElement',
     'HtmlLabelElement',
+    'HtmlOptionElement',
+    'HtmlSelectElement',
     'Window',
     'EventTarget',
     'Response',
