--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -16,6 +16,7 @@ features = [
     'Document',
     'HtmlElement',
     'HtmlButtonElement',
+    'HtmlDivElement',
     'HtmlFormElement',
     'HtmlInputElement',
     'HtmlLabelElement',
