--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -9,8 +9,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 lite-lib = { path = "../lite-lib" }
-wasm-bindgen = "0.2.60"
+wasm-bindgen = "0.2.62"
 wasm-bindgen-futures = "0.4.11"
+js-sys = "0.3.37"
 
 [dependencies.web-sys]
 version = "0.3.4"
