--- a/app-el/package.json
+++ b/app-el/package.json
@@ -7,7 +7,7 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "electron ."
+    "start": "webpack --config webpack.config.js && electron ."
   },
   "dependencies": {
     "electron": "^8.0.3"
