proof of concept completed

--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -17,13 +17,5 @@ features = [
     'HtmlElement',
     'HtmlButtonElement',
     'HtmlDivElement',
-    'HtmlFormElement',
-    'HtmlInputElement',
-    'HtmlLabelElement',
-    'HtmlOptionElement',
-    'HtmlSelectElement',
-    'Window',
-    'EventTarget',
-    'Response',
-    'Request'
+    'Window'
 ]
