--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -13,6 +13,7 @@ js-sys = "0.3.37"
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
+    'console',
     'Document',
     'HtmlElement',
     'HtmlButtonElement',
