--- a/lite-lib/Cargo.toml
+++ b/lite-lib/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 wasm-bindgen = "0.2.62"
 wasm-bindgen-futures = "0.4.11"
 js-sys = "0.3.37"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.55"
 
 [dependencies.web-sys]
 version = "0.3.4"
