--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 lite-lib = { path = "../lite-lib" }
 wasm-bindgen = "0.2.62"
 js-sys = "0.3.37"
+serde_json = "1.0.55"
 
 [profile.release]
 opt-level = "s"
